--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,16 @@
   <title>FEThink AI Assistant</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      padding: 16px;
-    }
+  font-family: Arial, sans-serif;
+  padding: 16px;
+  margin: 0;
+  overflow-y: auto;
+  height: 100%;
+}
+html {
+  height: 100%;
+}
+
     #chat {
       margin-bottom: 12px;
     }
