--- a/public/widget-research.html
+++ b/public/widget-research.html
@@ -5,35 +5,60 @@
   <style>
     * { box-sizing: border-box; }
     body {
-      margin: 0;
-      padding: 12px;
-      font-family: Arial, sans-serif;
-      background: #fff;
-    }
-    #chat {
-      font-size: 14px;
-      margin-bottom: 8px;
-      max-height: 320px;
-      overflow-y: auto;
-    }
-    .msg { margin: 6px 0; }
-    input {
-      width: 100%;
-      padding: 8px;
-    }
-    button {
-      margin-top: 6px;
-      padding: 8px;
-      width: 100%;
-    }
+  margin: 0;
+  padding: 12px;
+  font-family: Arial, sans-serif;
+  background: #fff;
+}
+
+/* Centre the widget content */
+.widget {
+  max-width: 480px;
+  margin: 0 auto;
+}
+
+/* Chat area */
+#chat {
+  font-size: 14px;
+  margin-bottom: 10px;
+  max-height: 260px;
+  overflow-y: auto;
+  border: 1px solid #eee;
+  padding: 8px;
+  border-radius: 8px;
+  background: #fafafa;
+}
+
+.msg {
+  margin: 6px 0;
+}
+
+/* Input + button */
+input {
+  width: 100%;
+  padding: 8px;
+  font-size: 14px;
+}
+
+button {
+  margin-top: 6px;
+  padding: 8px;
+  width: 100%;
+  font-size: 14px;
+  cursor: pointer;
+}
+
   </style>
 </head>
 <body>
 
-<div id="chat"></div>
+<div class="widget">
+  <div id="chat"></div>
 
-<input id="input" placeholder="Ask a research question…" />
-<button onclick="send()">Send</button>
+  <input id="input" placeholder="Ask a research question…" />
+  <button onclick="send()">Send</button>
+</div>
+
 
 <script>
 async function send() {
