--- a/public/widget-research.html
+++ b/public/widget-research.html
@@ -6,10 +6,11 @@
     * { box-sizing: border-box; }
     body {
   margin: 0;
-  padding: 12px;
+  padding: 8px 12px 4px 12px; /* smaller bottom padding */
   font-family: Arial, sans-serif;
   background: #fff;
 }
+
 
 /* Centre the widget content */
 .widget {
@@ -41,12 +42,13 @@ input {
 }
 
 button {
-  margin-top: 6px;
+  margin: 6px 0 0 0; /* no bottom margin */
   padding: 8px;
   width: 100%;
   font-size: 14px;
   cursor: pointer;
 }
+
 
   </style>
 </head>
