--- a/public/widget-research.html
+++ b/public/widget-research.html
@@ -83,7 +83,7 @@ async function send() {
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
       message: text,
-      context: "research"
+      tier: "free"
     })
   });
 
