--- a/public/widget-research-filtered.html
+++ b/public/widget-research-filtered.html
@@ -40,13 +40,13 @@ button {
   font-size: 14px;
   border-radius: 8px;
   border: none;
-  background-color: #6b8cff;
+  background-color: #008060;
   color: #fff;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #5a78e0;
+  background-color: #63104E;
 }
 
 #chat {
