--- a/public/widget-research-filtered.html
+++ b/public/widget-research-filtered.html
@@ -172,9 +172,28 @@ async function send() {
 const activity = document.getElementById("activity").value;
 const question = input.value.trim();
 
-const text = `Subject: ${subject}
+const text = `You are an FE and HE teaching support assistant.
+
+GLOBAL RESPONSE RULES (apply to every answer):
+- Use clear headings
+- Use bullet points where appropriate
+- Keep language plain and accessible
+- Avoid long paragraphs
+- Structure content so it can be used directly in teaching
+
+Context:
+Subject: ${subject}
 Activity: ${activity}
-Question: ${question}`;
+
+User request:
+${question}
+
+Response format:
+- Title
+- Purpose (1 sentence)
+- Steps / guidance in bullet points
+- Optional extension or variation`;
+
 
   if (!text) return;
   input.value = "";
