--- a/public/widget-research-filtered.html
+++ b/public/widget-research-filtered.html
@@ -216,11 +216,12 @@ Response format:
 
   const data = await res.json();
   const formattedReply = data.reply
-  .replace(/^### (.*)$/gm, "<b>$1</b><br><br>")
-  .replace(/^## (.*)$/gm, "<b>$1</b><br><br>")
-  .replace(/^# (.*)$/gm, "<b>$1</b><br><br>")
+  .replace(/^### (.*)$/gm, "<b>$1</b><br>")
+  .replace(/^## (.*)$/gm, "<b>$1</b><br>")
+  .replace(/^# (.*)$/gm, "<b>$1</b><br>")
   .replace(/\n\n/g, "<br><br>")
   .replace(/\n/g, "<br>");
+
 
 chat.innerHTML += `<div class="msg"><b>AI:</b><br>${formattedReply}</div>`;
   }
