--- a/public/widget-research-filtered.html
+++ b/public/widget-research-filtered.html
@@ -85,10 +85,15 @@ html, body {
   margin: 16px 0;
   line-height: 1.5;
 }
-.msg b {
-  display: block;
-  margin-top: 4px;
+.ai-h {
+  font-weight: 700;
+  margin: 10px 0 6px 0; /* one line above, one line below */
 }
+
+.ai-gap {
+  height: 8px; /* controlled spacing between sections */
+}
+
 
 /* Input + button */
 input {
