--- a/public/widget-research-filtered.html
+++ b/public/widget-research-filtered.html
@@ -220,12 +220,26 @@ Response format:
   });
 
   const data = await res.json();
-  const formattedReply = data.reply
-  .replace(/^### (.*)$/gm, "<b>$1</b><br>")
-  .replace(/^## (.*)$/gm, "<b>$1</b><br>")
-  .replace(/^# (.*)$/gm, "<b>$1</b><br>")
-  .replace(/\n\n/g, "<br>")
-  .replace(/\n/g, "<br>");
+  // 1. Escape HTML so nothing breaks
+const safeReply = (data.reply || "")
+  .replace(/&/g, "&amp;")
+  .replace(/</g, "&lt;")
+  .replace(/>/g, "&gt;");
+
+// 2. Convert markdown headings into styled heading blocks
+let formattedReply = safeReply.replace(
+  /^#{1,3}\s+(.*)$/gm,
+  `<div class="ai-h">$1</div>`
+);
+
+// 3. Convert blank lines into a controlled gap
+formattedReply = formattedReply.replace(
+  /\n{2,}/g,
+  `<div class="ai-gap"></div>`
+);
+
+// 4. Convert remaining single newlines
+formattedReply = formattedReply.replace(/\n/g, "<br>");
 
 
 chat.innerHTML += `<div class="msg"><b>AI:</b><br>${formattedReply}</div>`;
